--- a/page1.html
+++ b/page1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page 1</title>
+    <title>Home Page</title>
 </head>
 <body>
-    <h1>This is Page 1</h1>
-    <a href="index.html">Home</a>
+    <h1>Welcome to the Home Page</h1>
+    <a href="page1.html">Page 1</a>
     <a href="page2.html">Page 2</a>
 </body>
 </html>
