--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>This is Page 1</h1>
-    <a href="index.html">Home</a>
+    <a href="page3.html">Home</a>
     <a href="page2.html">Page 2</a>
 </body>
 </html>
