--- a/page1.html
+++ b/page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home Page1-devops</title>
+    <title>Home Page1</title>
 </head>
 <body>
     <h1>Welcome to the Home Page</h1>
